--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://horizon-ui.com/horizon-ui-chakra",
-  "name": "horizon-ui-chakra",
+  "name": "dashboard-diese",
   "version": "1.0.1",
   "private": true,
   "dependencies": {
@@ -20,6 +19,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "firebase": "^10.7.1",
     "framer-motion": "^4.1.17",
     "react": "17.0.2",
     "react-apexcharts": "1.4.0",
