--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-table": "^7.7.0",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
